--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     ext{
-        kotlin_version = '1.3.61'
+//        kotlin_version = '1.3.61'
+        kotlin_version = '1.3.70'
         version_core = "1.2.0"
         version_constraint_layout = "1.1.3"
         version_lifecycle_extensions = "2.2.0"
